fix: credit link to appear together in small screens

--- a/src/app/projects-page/project-item/project-item.component.html
+++ b/src/app/projects-page/project-item/project-item.component.html
@@ -30,10 +30,11 @@
 </div>
 <div class="credits" *ngIf="item.credits.length">
   <span *ngFor="let credit of item.credits">
-    {{ credit.role }}: {{ credit.name }} (<a
-      href="https://instagram.com/_u/{{ credit.nickname }}"
-      target="_blank"
-      >@{{ credit.nickname }}</a
-    >)
+    {{ credit.role }}: {{ credit.name }}
+    <span class="anchor"
+      >(<a href="https://instagram.com/_u/{{ credit.nickname }}" target="_blank"
+        >@{{ credit.nickname }}</a
+      >)</span
+    >
   </span>
 </div>
