--- a/src/app/projects-page/project-item/project-item.component.scss
+++ b/src/app/projects-page/project-item/project-item.component.scss
@@ -91,5 +91,9 @@
     display: flex;
     gap: margins.$s;
     justify-content: flex-start;
+
+    .anchor {
+      display: inline-block;
+    }
   }
 }
