feat(projects): 2 column layout for tech material / design book

--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -1,3 +1,5 @@
 <app-lookbooks [slug]="slug"></app-lookbooks>
-<app-tech-material [slug]="slug"></app-tech-material>
-<app-design-book [slug]="slug"></app-design-book>
+<div class="material-and-book">
+  <app-tech-material [slug]="slug"></app-tech-material>
+  <app-design-book [slug]="slug"></app-design-book>
+</div>
