--- a/src/app/projects-page/project-item/project-item.component.scss
+++ b/src/app/projects-page/project-item/project-item.component.scss
@@ -83,6 +83,9 @@
     display: flex;
     flex-direction: column;
     gap: margins.$s;
+
+    // Keep line breaks
+    white-space: pre-wrap;
   }
 
   .credits {
