--- a/src/app/image-swiper/image-swiper.component.scss
+++ b/src/app/image-swiper/image-swiper.component.scss
@@ -5,8 +5,10 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    display: flex;
 
     swiper-slide {
+      position: relative;
       max-height: inherit;
 
       img {
