refactor: add preview images to list file

--- a/src/app/projects-page/project-item/project-item.component.html
+++ b/src/app/projects-page/project-item/project-item.component.html
@@ -15,7 +15,7 @@
     <div class="description" [innerHtml]="_item.description"></div>
   </div>
   <app-image-swiper
-    [images]="previewImages | async"
+    [images]="_item.previewImages"
     sizes="calc(50vw - 16px), 33.33vw"
     [srcSet]="srcSet"
     [priority]="priority"
