--- a/src/app/project-page/project-page.component.scss
+++ b/src/app/project-page/project-page.component.scss
@@ -8,6 +8,10 @@
   @include page.padding;
   gap: margins.$m;
 
+  h2 {
+    text-align: center;
+  }
+
   .material-and-book {
     display: flex;
     gap: margins.$m;
