--- a/src/app/project-page/project-page.component.html
+++ b/src/app/project-page/project-page.component.html
@@ -7,33 +7,33 @@
       Look {{ index + 1 }}
       <ng-container *ngIf="lookbook.name">"{{ lookbook.name }}"</ng-container>
     </h2>
-    <app-image-swiper
+    <app-images-swiper
       [images]="lookbook.images"
       [srcSet]="LOOKBOOK_SWIPER.srcSet"
       [sizes]="LOOKBOOK_SWIPER.sizes"
       [priority]="index < MAX_LOOKBOOKS_PER_VIEWPORT"
       [customSwiperOptions]="LOOKBOOK_SWIPER.customSwiperOptions"
       [style.max-width]="LOOKBOOK_MAX_WIDTH_PX + 'px'"
-    ></app-image-swiper>
+    ></app-images-swiper>
   </div>
 </div>
 <div class="material-and-book">
   <div class="tech-material">
     <h2>Tech material</h2>
-    <app-image-swiper
+    <app-images-swiper
       [images]="techMaterialImages | async"
       [srcSet]="HALF_SCREEN_SWIPER.srcSet"
       [sizes]="HALF_SCREEN_SWIPER.sizes"
       [customSwiperOptions]="HALF_SCREEN_SWIPER.customSwiperOptions"
-    ></app-image-swiper>
+    ></app-images-swiper>
   </div>
   <div class="design-book">
     <h2>Design book</h2>
-    <app-image-swiper
+    <app-images-swiper
       [images]="designBookImages | async"
       [srcSet]="HALF_SCREEN_SWIPER.srcSet"
       [sizes]="HALF_SCREEN_SWIPER.sizes"
       [customSwiperOptions]="HALF_SCREEN_SWIPER.customSwiperOptions"
-    ></app-image-swiper>
+    ></app-images-swiper>
   </div>
 </div>
