--- a/src/app/projects-page/project-item/project-item.component.scss
+++ b/src/app/projects-page/project-item/project-item.component.scss
@@ -31,7 +31,7 @@
     width: $texts-width-big-screen;
   }
 
-  app-image-swiper {
+  app-images-swiper {
     // 👇 Seems swiper needs size set to work fine
     width: calc(100% - $texts-width-big-screen);
     $extra-space: 48px;
@@ -49,7 +49,7 @@
       order: 2;
     }
 
-    app-image-swiper {
+    app-images-swiper {
       width: 100%;
       order: 1;
 
