--- a/src/app/projects-page/projects-page.component.html
+++ b/src/app/projects-page/projects-page.component.html
@@ -2,4 +2,5 @@
   *ngFor="let item of projects | async; first as isFirst"
   [item]="item"
   [priority]="isFirst"
+  [class.has-preview-images]="item.previewImages && item.previewImages.length"
 ></app-project-item>
