feat(projects): add has content field to project item

--- a/src/app/projects-page/project-item/project-item.component.html
+++ b/src/app/projects-page/project-item/project-item.component.html
@@ -1,7 +1,9 @@
 <div class="text-and-images">
   <div class="texts">
     <span class="title">
-      <a [routerLink]="[PROJECTS_PATH, _item.slug]"
+      <a
+        *ngIf="_item.hasContent; else title"
+        [routerLink]="[PROJECTS_PATH, _item.slug]"
         ><ng-container [ngTemplateOutlet]="title"></ng-container
       ></a>
       <ng-template #title>
