feat(projects): fix detail layout when tech/design images not there

--- a/src/app/project-page/project-page.component.scss
+++ b/src/app/project-page/project-page.component.scss
@@ -32,12 +32,13 @@
 
   .material-and-book {
     display: flex;
-    gap: margins.$m;
+    $margin: margins.$m;
+    gap: $margin;
     max-width: 100%;
+    justify-content: center;
 
     > * {
-      $marginM: margins.$m;
-      width: calc((100% - $marginM) / 2);
+      width: calc((100% - $margin) / 2);
     }
 
     @include breakpoints.until-s {
