feat(about): add about page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
   <nav>
     <ul>
       <li>Contact</li>
-      <li>Projects</li>
-      <li>About me</li>
+      <li><a routerLink="/">Projects</a></li>
+      <li><a [routerLink]="['/', ABOUT_PATH]">About me</a></li>
     </ul>
   </nav>
 </header>
