--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,6 +7,7 @@
   background-color: white;
 
   header {
+    @include typographies.regular;
     padding: header.$padding-vertical page.$padding-horizontal;
     justify-content: center;
     font-size: header.$font-size;
