feat(about): add route to lighthouse & prerender
small layout fixes

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -3,6 +3,7 @@
   <img
     [ngSrc]="'/about/portrait.jpg?updatedAt=1698936154350'"
     [ngSrcset]="srcSet"
+    [sizes]="sizes"
     height="4096"
     width="3072"
     alt="Portrait picture"
