--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,4 +1,5 @@
 <h1>{{ title }}</h1>
+<app-social></app-social>
 <div class="contents">
   <img
     [ngSrc]="'/about/portrait.jpg?updatedAt=1698936154350'"
