feat(about): add resume links

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,5 +1,8 @@
 <h1>{{ title }}</h1>
-<app-social></app-social>
+<div class="links">
+  <app-social></app-social>
+  <app-resume></app-resume>
+</div>
 <div class="contents">
   <img
     [ngSrc]="'/about/portrait.jpg?updatedAt=1698936154350'"
