--- a/src/app/about-page/social/social.component.html
+++ b/src/app/about-page/social/social.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let item of items">
-    <a [href]="item.url">
+    <a [href]="item.url" target="_blank">
       <fa-icon [icon]="item.icon" [title]="item.displayName"></fa-icon>
     </a>
   </li>
