--- a/src/app/projects/project-page/project-page.component.html
+++ b/src/app/projects/project-page/project-page.component.html
@@ -1,69 +1,34 @@
-<ng-container *ngIf="viewModel$ | async as viewModel">
-  <div class="assets video" *ngIf="viewModel.youtubeIframeUrl">
-    <h2>Videos</h2>
-    <iframe
-      width="560"
-      height="315"
-      [attr.src]="viewModel.youtubeIframeUrl"
-      title="YouTube video player"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe>
-  </div>
-  <ng-container *ngIf="viewModel.lookbooks?.length">
+<ng-container *ngIf="assetsCollections$ | async as assetsCollections">
+  <ng-container
+    *ngFor="let assetsCollection of assetsCollections; index as index"
+  >
     <div
       class="assets"
-      *ngFor="let lookbook of viewModel.lookbooks; index as index"
+      [class.half]="assetsCollection.data.size === AssetsCollectionSize.Half"
     >
-      <h2>
-        Look {{ index + 1 }}
-        <ng-container *ngIf="lookbook.name">"{{ lookbook.name }}"</ng-container>
-      </h2>
+      <h2>{{ assetsCollection.data.name }}</h2>
+      <iframe
+        *ngIf="assetsCollection.type === AssetsCollectionType.Video"
+        width="560"
+        height="315"
+        [attr.src]="
+          assetsCollection.youtubePlaylist.iframeUrl | sanitizeResourceUrl
+        "
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
       <app-images-swiper
-        [images]="lookbook.images"
-        [srcSet]="FULL_SCREEN_SWIPER.srcSet"
-        [sizes]="FULL_SCREEN_SWIPER.sizes"
-        [customSwiperOptions]="FULL_SCREEN_SWIPER.customSwiperOptions"
-        [style.max-width]="FULL_SCREEN_SWIPER_MAX_WIDTH + 'px'"
+        *ngIf="assetsCollection.type === AssetsCollectionType.Image"
+        [images]="assetsCollection.images"
+        [srcSet]="assetsCollection.imagesSwiperConfig.srcSet"
+        [sizes]="assetsCollection.imagesSwiperConfig.sizes"
+        [customSwiperOptions]="
+          assetsCollection.imagesSwiperConfig.customSwiperOptions
+        "
+        [style.max-width.px]="assetsCollection.imagesSwiperConfig.maxWidthPx"
         [priority]="index < MAX_SWIPERS_PER_VIEWPORT"
       ></app-images-swiper>
     </div>
   </ng-container>
-  <div
-    class="assets half"
-    *ngIf="viewModel.techMaterialImages && viewModel.techMaterialImages.length"
-  >
-    <h2>Tech material</h2>
-    <app-images-swiper
-      [images]="viewModel.techMaterialImages"
-      [srcSet]="HALF_SCREEN_SWIPER.srcSet"
-      [sizes]="HALF_SCREEN_SWIPER.sizes"
-      [customSwiperOptions]="HALF_SCREEN_SWIPER.customSwiperOptions"
-    ></app-images-swiper>
-  </div>
-  <div
-    class="assets half"
-    *ngIf="viewModel.designBookImages && viewModel.designBookImages.length"
-  >
-    <h2>Design book</h2>
-    <app-images-swiper
-      [images]="viewModel.designBookImages"
-      [srcSet]="HALF_SCREEN_SWIPER.srcSet"
-      [sizes]="HALF_SCREEN_SWIPER.sizes"
-      [customSwiperOptions]="HALF_SCREEN_SWIPER.customSwiperOptions"
-    ></app-images-swiper>
-  </div>
-  <div
-    class="assets"
-    *ngIf="viewModel.conceptImages && viewModel.conceptImages.length"
-  >
-    <h2>Concept images</h2>
-    <app-images-swiper
-      [images]="viewModel.conceptImages"
-      [srcSet]="FULL_SCREEN_SWIPER.srcSet"
-      [sizes]="FULL_SCREEN_SWIPER.sizes"
-      [customSwiperOptions]="FULL_SCREEN_SWIPER.customSwiperOptions"
-      [style.max-width]="FULL_SCREEN_SWIPER_MAX_WIDTH + 'px'"
-    ></app-images-swiper>
-  </div>
 </ng-container>
