--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -19,6 +19,7 @@
   padding: logo.$padding-vertical page.$padding-horizontal;
 
   img {
+    // Keep in sync with component for responsive sizing!
     max-height: logo.$height-image;
     width: auto;
   }
