--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -5,7 +5,7 @@
     [width]="horizontalLogo.asset.width"
     [height]="horizontalLogo.asset.height"
     [priority]="true"
-    [ngSrcset]="horizontalLogo.attributes.ngSrcSet"
-    [sizes]="horizontalLogo.attributes.sizes"
+    [ngSrcset]="horizontalLogo.attributes.ngSrcSet.toString()"
+    [sizes]="horizontalLogo.attributes.sizes.toString()"
   />
 </a>
