--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -1,4 +1,4 @@
-// To keep in sync with TypeScript code
+// 👇 Keep in sync with TypeScript code
 $timing-function: cubic-bezier(0.2, 0, 0, 1);
 $standard-duration: 0.3s;
 @mixin standard {
