--- a/src/sass/_breakpoints.scss
+++ b/src/sass/_breakpoints.scss
@@ -3,6 +3,8 @@
  *
  * Obtained from Angular CDK
  * https://github.com/angular/components/blob/16.2.1/src/cdk/layout/breakpoints.ts
+ *
+ * 👇 Keep in sync with Typescript component code
  */
 @function almost($pixels) {
   @return $pixels - 0.02px;
