feat: several improvements around

--- a/src/app/about-page/about-page.component.scss
+++ b/src/app/about-page/about-page.component.scss
@@ -19,12 +19,6 @@
     align-items: center;
   }
 
-  .contents {
-    display: flex;
-    justify-content: space-around;
-    gap: margins.$m;
-  }
-
   h1 {
     @include typographies.size(7);
     @include typographies.bold;
@@ -32,7 +26,7 @@
 
   p {
     white-space: pre-wrap;
-    width: 55ch;
+    max-width: 35vw;
 
     @include breakpoints.until-s {
       min-width: unset;
@@ -41,12 +35,16 @@
   }
 
   img {
-    max-width: 20vw;
+    max-width: 35vw;
     object-fit: contain;
     object-position: top;
 
-    @include breakpoints.until-s {
-      max-width: 33.33vw;
+    @include breakpoints.s {
+      max-width: 60vw;
+    }
+
+    @include breakpoints.xs {
+      max-width: 75vw;
     }
   }
 }
