--- a/src/app/projects/projects-page/project-list-item/project-list-item.component.scss
+++ b/src/app/projects/projects-page/project-list-item/project-list-item.component.scss
@@ -85,6 +85,7 @@
     @include typographies.regular;
 
     display: flex;
+    flex-wrap: wrap;
     gap: margins.$s;
     justify-content: flex-start;
 
