--- a/src/app/projects/projects-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-page/project-list-item/project-list-item.component.html
@@ -28,10 +28,7 @@
 <div class="credits" *ngIf="credits && credits.length">
   <ng-container *ngFor="let credit of credits">
     <span *ngIf="credit.author">
-      {{ credit.role }}: {{ credit.author.firstName }}
-      <ng-container *ngIf="credit.author.lastName">
-        {{ credit.author.lastName }}
-      </ng-container>
+      {{ credit.role }}: {{ credit.author.name }}
       <span class="anchor" *ngIf="credit.social"
         >(<a [href]="credit.social.url.toString()" target="_blank"
           >@{{ credit.social.username }}</a
