feat(about): add email

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -3,6 +3,7 @@
   <app-social></app-social>
   <app-resume></app-resume>
 </div>
+<p class="link">{{ emailLocalPart }}@{{ domainName }}</p>
 <img
   [ngSrc]="portraitImage.filePath"
   [ngSrcset]="srcSet"
