--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -10,8 +10,8 @@
     [height]="portrait.asset.height"
     [width]="portrait.asset.width"
     [alt]="portrait.asset.alt"
-    [ngSrcset]="portrait.attributes.ngSrcSet.toString()"
-    [sizes]="portrait.attributes.sizes.toString()"
+    [ngSrcset]="portrait.attributes.ngSrcSet.asString"
+    [sizes]="portrait.attributes.sizes.asString"
     priority="true"
   />
   <p>{{ text }}</p>
