refactor(projects): use new responsive images service for detail view

--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -5,7 +5,7 @@
     [width]="horizontalLogo.asset.width"
     [height]="horizontalLogo.asset.height"
     [priority]="true"
-    [ngSrcset]="horizontalLogo.attributes.ngSrcSet.asString"
+    [ngSrcset]="horizontalLogo.attributes.breakpoints.ngSrcSet.asString"
     [sizes]="horizontalLogo.attributes.sizes.asString"
   />
 </a>
