--- a/src/app/projects/project-page/project-page.component.scss
+++ b/src/app/projects/project-page/project-page.component.scss
@@ -15,6 +15,7 @@
 
   $assetsGap: margins.$m;
 
+  //👇 Keep in sync with component responsive images
   .assets {
     display: flex;
     flex-direction: column;
