--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -10,7 +10,7 @@
     [height]="portrait.asset.height"
     [width]="portrait.asset.width"
     [alt]="portrait.asset.alt"
-    [ngSrcset]="portrait.attributes.ngSrcSet.asString"
+    [ngSrcset]="portrait.attributes.breakpoints.ngSrcSet.asString"
     [sizes]="portrait.attributes.sizes.asString"
     priority="true"
   />
