fix(logo): sync max height scss / ts

--- a/src/sass/_logo.scss
+++ b/src/sass/_logo.scss
@@ -1,5 +1,6 @@
 @use 'paddings';
 
 $padding-vertical: paddings.$m;
+// Keep in sync with component for responsive sizing!
 $height-image: 55px;
 $height: calc($height-image + $padding-vertical * 2);
