--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -3,6 +3,9 @@
     <swiper-slide
       *ngFor="let image of images; index as i"
       [style.aspect-ratio]="image.width / image.height"
+      [style.min-width.%]="
+        !!_maxSlidesPerView ? 100 / _maxSlidesPerView : undefined
+      "
     >
       <img
         [ngSrc]="image.filePath"
