build(deps): update Angular to v17

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -3,7 +3,7 @@
   <app-social></app-social>
   <app-resume></app-resume>
 </div>
-<p class="link">{{ emailLocalPart }}@{{ domainName }}</p>
+<p class="link">{{ emailLocalPart }}&#64;{{ domainName }}</p>
 <article>
   <img
     [ngSrc]="portrait.asset.filePath"
