--- a/src/app/projects/projects-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-page/project-list-item/project-list-item.component.html
@@ -30,7 +30,7 @@
       {{ credit.role }}: {{ credit.author.name }}
       <span class="anchor" *ngIf="credit.social"
         >(<a [href]="credit.social.url" target="_blank"
-          >@{{ credit.social.username }}</a
+          >&#64;{{ credit.social.username }}</a
         >)</span
       >
     </span>
