--- a/src/swiper.scss
+++ b/src/swiper.scss
@@ -1,10 +1,5 @@
-//noinspection CssUnknownTarget
-@import 'swiper/element/css/a11y';
-//noinspection CssUnknownTarget
-@import 'swiper/element/css/autoplay';
-//noinspection CssUnknownTarget
-@import 'swiper/element/css/keyboard';
-//noinspection CssUnknownTarget
-@import 'swiper/element/css/navigation';
-//noinspection CssUnknownTarget
-@import 'swiper/element/css/pagination';
+@forward 'swiper/element/css/a11y';
+@forward 'swiper/element/css/autoplay';
+@forward 'swiper/element/css/keyboard';
+@forward 'swiper/element/css/navigation';
+@forward 'swiper/element/css/pagination';
